# webthing-client-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: admin_operations.py  event_operations.py  event_type_operations.py  push_simple_event.py  replay.py  resolution_operations.py  subscribe_to_actions.py  subscribe_to_events.py  subscribe_to_property.py  subscribe_to_requests.py
webthing/: action.py  client.py  event.py  utils.py
webthing_client/: client.py  observation.py  semantic.py  stomp.py  utils.py
webthing_client/input/: from_to_input.py  iri_input.py  property_observations_input.py
webthing_client/input/action/: event_input.py  event_type_input.py  from_to_user_input.py  iri_user_input.py  resolution_input.py
webthing_client/input/property/: observations_input.py  properties_input.py
webthing_client/input/replay/: replay_input.py
webthing_client/model/: ontology.py  webthing_observation.py
webthing_client/model/action/: action.py  base.py  request.py  resolution.py
webthing_client/model/action/operation/: operation.py
webthing_client/model/event/: event.py  event_type.py  feedback.py  feedback_schema.py  observation.py  stimulus.py
webthing_client/model/property/: observable_property.py
webthing_client/model/replay/: replay.py
webthing_client/model/system/: sensor.py  system.py
webthing_client/model/user/: user.py
webthing_client/standard_api/: api_handler.py  api_marshalling.py
