[tool.poetry]
name = "webthing_client"
version = "0.1.0"
description = ""
authors = ["Emile Deman"]

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = "1.5.0"
stomper = "0.4.3"
rdflib = "6.2.0"
requests = "2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
