[tool.poetry]
name = "webthing-client"
version = "0.2.6"
description = "Client for the Dynamic Dashboard Webthings"
authors = ["Emile Deman"]
maintainers = [
    "Emile Deman <emile.deman@ugent.be>",
	"Stef Pletinck <s@stefpletinck.be>"
]
readme = "README.md"
repository = "https://github.com/predict-idlab/webthing-client-python"

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = "1.5.0"
stomper = "0.4.3"
rdflib = "6.2.0"
requests = "2.28.2"
python-dateutil = "2.8.2"
jsonschema = "4.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
